# Gauche-dbd-mysql

./: .gitignore  ChangeLog  DIST  Makefile.in  README  README.md  acconfig.h.in  configure  configure.ac  configure.in  dbd_mysql.c  dbd_mysql.h  dbd_mysqllib.scm  dbd_mysqllib.stub  gauche_dbd_mysql.c  gauche_dbd_mysql.h  gauche_dbd_mysqllib.stub  package.scm  test.scm
.github/workflows/: main.yml
dbd/: mysql.scm
test/: dbd.scm  dbi.scm
tools/: create-test-db-and-user.sql  drop-test-db-and-user.sql
